--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.4+11
   uuid: ^3.0.6
   provider: ^6.0.2
+  
 
 dev_dependencies:
   flutter_test:
@@ -53,11 +54,18 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/learngit.png"
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -66,6 +74,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/github.svg
+    - assets/learngit.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
